Added sending emails at consultation creation.

--- a/.env
+++ b/.env
@@ -21,8 +21,11 @@ APP_SECRET=36abcc9d8ce104a0f9000f9e0da9cba6
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+MAIL_SENDER=senderemail
+MAIL_DOCTOR=doctoremail
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
